refatoracao: @Autowires e Collectors removidos, regex da validacao da cor em hexadecimal foram mudadas, dependendica ciclica removida, comentarios e souts foram removidos