@@ -4,23 +4,24 @@ import br.com.rtech.dto.CategoryListingData;
 import br.com.rtech.dto.CourseListingData;
 import br.com.rtech.dto.SubcategoryListingData;
 import br.com.rtech.model.*;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 public class CategoryApiController {
-    @Autowired
-    private CategoryRepository categoryRepository;
-    @Autowired
-    SubcategoryRepository subcategoryRepository;
-    @Autowired
-    CourseRepository courseRepository;
+    private final CategoryRepository categoryRepository;
+    private final SubcategoryRepository subcategoryRepository;
+    private final CourseRepository courseRepository;
+
+    public CategoryApiController(CategoryRepository categoryRepository, SubcategoryRepository subcategoryRepository, CourseRepository courseRepository) {
+        this.categoryRepository = categoryRepository;
+        this.subcategoryRepository = subcategoryRepository;
+        this.courseRepository = courseRepository;
+    }
 
     @GetMapping(value = "api/categories", produces = {"application/json", "application/xml"})
     public List<CategoryListingData> response() {
@@ -34,25 +35,24 @@ public class CategoryApiController {
                 .stream()
                 .map(category -> {
                             return new CategoryListingData(
-                                    category.getName(), category.getCode(), category.getOrder(), category.getHtmlColorCode(),
-                                    category.getStudyGuide(), coursesByCategory.get(category.getName()), getActiveSubcategoriesByCategory(category.getName()));
+                                    category, coursesByCategory.get(category.getName()), getActiveSubcategoriesByCategory(category.getName()));
                         }
                 )
-                .collect(Collectors.toList());
+                .toList();
 
     }
 
     private List<SubcategoryListingData> getActiveSubcategoriesByCategory(String categoryName) {
         return subcategoryRepository.findSubcategoriesByActive(StateActivation.ATIVA, categoryName).stream()
-                .map(subCategory -> new SubcategoryListingData(subCategory.getName(), subCategory.getCode(), subCategory.getStudyGuide(), getPublicCoursesBySubcategory(subCategory.getName())))
-                .collect(Collectors.toList());
+                .map(subCategory -> new SubcategoryListingData(subCategory, getPublicCoursesBySubcategory(subCategory.getName())))
+                .toList();
     }
 
     private List<CourseListingData> getPublicCoursesBySubcategory(String subcategoryName) {
         return courseRepository.findCourseByActive(CourseVisibility.PUBLICA, subcategoryName)
                 .stream()
-                .map(course -> new CourseListingData(course.getName(), course.getCode(), course.getEstimatedTimeCourseCompletion(), course.getDevelopedSkills()))
-                .collect(Collectors.toList());
+                .map(CourseListingData::new)
+                .toList();
     }
 
     private Map<String, Long> getCourseCountByCategory() {
